@@ -1,5 +1,10 @@
 2008-09-06  Felix Zielcke  <fzielcke@z-51.de>
 
+	* disk/raid.c (insert_array): Set `array->chunk_size' to 64 for
+	RAID level 1.
+
+2008-09-06  Felix Zielcke  <fzielcke@z-51.de>
+
 	* fs/iso9660.c (grub_iso9660_date): New structure.
 	(grub_iso9660_primary_voldesc): Add `grub_iso9660_date' member.
 	(grub_iso9660_uuid): New function.
